--- a/paper/01-frontpage.tex
+++ b/paper/01-frontpage.tex
@@ -24,16 +24,16 @@ Prof. Dr. Klaus Pohl}
 
 \vspace*{2.5cm}
 
-\normalsize{vorgelegt der Fakultät für Wirtschaftswissenschaften\\
-der Universität Duisburg-Essen (Campus Essen) von}
+\normalsize{submitted to the faculty of economics\\
+of the University Duisburg-Essen (Campus Essen) by}
 
 \vspace*{\baselineskip}
 
 \normalsize{
-Max Mustermann \\
-Musterstraße 123 \\
-12345 Musterstadt \\
-Matrikelnummer: 1234567
+Shanmathuran Sritharan \\
+Mülheimerstr. 391 \\
+46045 Oberhausen \\
+Matrikelnummer: 2279009
 }
 
 \vspace*{1.5cm}
@@ -44,12 +44,12 @@ Matrikelnummer: 1234567
 
 \normalsize{
 \begin{tabular*}{\linewidth}{p{0.3\linewidth}p{0.7\linewidth}}
-\textbf{Betreuung:}      & Dr.\,Andreas~Metzger\\
+\textbf{Betreuung:}      & Dr.\,Zoltán~Adam~Mann\\
 \textbf{Erstgutachter:}  & Prof.\,Dr.\,Klaus~Pohl\\
 \textbf{Zweitgutachter:} & Prof.\,Dr.\,Michael~Goedicke\\
 \\
 \textbf{Studiengang:}    & Angewandte~Informatik -- Systems~Engineering (M.\,Sc.)\\
-\textbf{Semester:}       & 4
+\textbf{Semester:}       & SS 2017
 \end{tabular*}
 }
 
