--- a/paper/referenzen.bib
+++ b/paper/referenzen.bib
@@ -11,3 +11,23 @@
     editor = {Babar, Muhammad Ali and Paik, Hye-Young and Chetlur, Malolan and Bauer, Michael},
     date = {2014}
 }
+
+
+@article{calheiros_2011,
+	title = {{CloudSim}: {A} {Toolkit} for {Modeling} and {Simulation} of {Cloud} {Computing} {Environments} and {Evaluation} of {Resource} {Provisioning} {Algorithms}},
+	volume = {41},
+	issn = {0038-0644},
+	shorttitle = {{CloudSim}},
+	url = {http://dx.doi.org/10.1002/spe.995},
+	doi = {10.1002/spe.995},
+	abstract = {Cloud computing is a recent advancement wherein IT infrastructure and applications are provided as âservicesâ to end-users under a usage-based payment model. It can leverage virtualized services even on the fly based on requirements (workload patterns and QoS) varying with time. The application services hosted under Cloud computing model have complex provisioning, composition, configuration, and deployment requirements. Evaluating the performance of Cloud provisioning policies, application workload models, and resources performance models in a repeatable manner under varying system and user configurations and requirements is difficult to achieve. To overcome this challenge, we propose CloudSim: an extensible simulation toolkit that enables modeling and simulation of Cloud computing systems and application provisioning environments. The CloudSim toolkit supports both system and behavior modeling of Cloud system components such as data centers, virtual machines (VMs) and resource provisioning policies. It implements generic application provisioning techniques that can be extended with ease and limited effort. Currently, it supports modeling and simulation of Cloud computing environments consisting of both single and inter-networked clouds (federation of clouds). Moreover, it exposes custom interfaces for implementing policies and provisioning techniques for allocation of VMs under inter-networked Cloud computing scenarios. Several researchers from organizations, such as HP Labs in U.S.A., are using CloudSim in their investigation on Cloud resource provisioning and energy-efficient management of data center resources. The usefulness of CloudSim is demonstrated by a case study involving dynamic provisioning of application services in the hybrid federated clouds environment. The result of this case study proves that the federated Cloud computing model significantly improves the application QoS requirements under fluctuating resource and service demand patterns. Copyright Â© 2010 John Wiley \& Sons, Ltd.},
+	number = {1},
+	urldate = {2017-03-02},
+	journal = {Softw. Pract. Exper.},
+	author = {Calheiros, Rodrigo N. and Ranjan, Rajiv and Beloglazov, Anton and De Rose, CÃ©sar A. F. and Buyya, Rajkumar},
+	month = jan,
+	year = {2011},
+	keywords = {application scheduling, Cloud computing, modelling and simulation, performance evaluation, resource management},
+	pages = {23--50},
+	file = {CloudSim2010.pdf:/Users/Shan/Library/Application Support/Zotero/Profiles/8pjk1st2.default/zotero/storage/PVQTMMMK/CloudSim2010.pdf:application/pdf;CloudSim2010.pdf:/Users/Shan/Library/Application Support/Zotero/Profiles/8pjk1st2.default/zotero/storage/C5TZTE3B/CloudSim2010.pdf:application/pdf}
+}
