--- a/paper/10-intro.tex
+++ b/paper/10-intro.tex
@@ -1,7 +1,7 @@
 %
 %
 %
-\chapter{Einleitung}
+\chapter{Introduction}
 \label{chap:intro}
 
 %
@@ -13,7 +13,7 @@ tbd
 %
 %
 %
-\section{Ziele der Arbeit}
+\section{Goals of thesis}
 tbd
 
 Zur Erreichung des Hauptziels der Arbeit werden folgende Teilziele definiert:
