quickfix vm-alloc compilation

--- a/paper/00-thesis-base.tex
+++ b/paper/00-thesis-base.tex
@@ -221,7 +221,7 @@
 
 % ############################# DOCUMENT ##############################
 \begin{document}
-\shorthandoff{"} % deactivates shorthand "a for a umlaut (ä) (necessary if quotation marks are used e.g. in source code)
+%\shorthandoff{"} % deactivates shorthand "a for a umlaut (ä) (necessary if quotation marks are used e.g. in source code)
 \setcounter{secnumdepth}{3} % numbering up to three level
 %\sloppy % LaTeX will always try to create justified text (this may result in bigger gaps between words)
 
